only use non blank cells in the visible data methods, fdo#54552

Change-Id: I2a0914fbaff3e3f707a9c06f693079aed2b89ba4